--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
 		</div>
 	</header>
 	<main class="page">
+		<h1 class="visually-hidden">IndoTravel - путешествия по Индоннезии</h1>
 		<!-- !ABOUT -->
 		<section class="section about" id="about">
 			<div class="container">
@@ -85,33 +86,75 @@
 						</div>
 						<div class="slider">
 							<div class="slider__item">
-								<img src="./img/about/slider/slide-1.jpg" alt="">
+								<picture>
+									<source srcset="./img/about/slider/slide-1.avif" type="image/avif">
+									<source srcset="./img/about/slider/slide-1.webp" type="image/webp">
+									<img src="./img/about/slider/slide-1.jpg" alt="Лес Индонезии с пальмами на переднем плане" width="320" height="208">
+								</picture>
 							</div>
 							<div class="slider__item">
-								<img src="./img/about/slider/slide-2.jpg" alt="">
+								<picture>
+									<source srcset="./img/about/slider/slide-2.avif" type="image/avif">
+									<source srcset="./img/about/slider/slide-2.webp" type="image/webp">
+									<img src="./img/about/slider/slide-2.jpg" alt="Панорама сверху на лес Индонезии" width="320" height="208">
+								</picture>
 							</div>
 							<div class="slider__item">
-								<img src="./img/about/slider/slide-3.jpg" alt="">
+								<picture>
+									<source srcset="./img/about/slider/slide-3.avif" type="image/avif">
+									<source srcset="./img/about/slider/slide-3.webp" type="image/webp">
+									<img src="./img/about/slider/slide-3.jpg" alt="Маленькая мартышка сидящая на полу" width="320" height="208">
+								</picture>
 							</div>
 							<div class="slider__item">
-								<img src="./img/about/slider/slide-4.jpg" alt="">
+								<picture>
+									<source srcset="./img/about/slider/slide-4.avif" type="image/avif">
+									<source srcset="./img/about/slider/slide-4.webp" type="image/webp">
+									<img src="./img/about/slider/slide-4.jpg" alt="Берег Индонезии с маленькими беседками" width="320" height="208">
+								</picture>
 							</div>
 							<div class="slider__item">
-								<img src="./img/about/slider/slide-5.jpg" alt="">
+								<picture>
+									<source srcset="./img/about/slider/slide-5.avif" type="image/avif">
+									<source srcset="./img/about/slider/slide-5.webp" type="image/webp">
+									<img src="./img/about/slider/slide-5.jpg" alt="Индонезийский холм" width="320" height="208">
+								</picture>
 							</div>
 						</div>
 						<div class="about__bot">
 							<div class="about__left-col">
-								<img src="./img/about/img-1.jpg" alt="" width="480" height="312">
+								<picture>
+									<source srcset="./img/about/img-1.avif" type="image/avif">
+									<source srcset="./img/about/img-1.webp" type="image/webp">
+									<img src="./img/about/img-1.jpg" alt="Лес Индонезии с пальмами на переднем плане" width="480" height="312">
+								</picture>
 								<p class="about__text about__text--second"> Индонезия расположилась на легендарных и&nbsp;известных своей довольно непохожей историей островах Юго-Восточной Азии – на&nbsp;Суматре, Яве, Сулавеси, Бали, отчасти на&nbsp;Борнео и на Новой Гвинее, а также на&nbsp;множестве более мелких островов Малайского архипелага.</p>
 							</div>
-							<img src="./img/about/img-2.jpg" alt="" width="280" height="377">
+							<picture>
+								<source srcset="./img/about/img-2.avif" type="image/avif">
+								<source srcset="./img/about/img-2.webp" type="image/webp">
+								<img src="./img/about/img-2.jpg" alt="Маленькая мартышка сидящая на полу" width="280" height="377">
+							</picture>
 						</div>
 					</div>
 					<div class="about__gallery">
-						<img src="./img/about/img-3.jpg" alt="" width="380" height="700">
-						<img src="./img/about/img-4.jpg" alt="" width="380" height="507">
-						<img src="./img/about/img-5.jpg" alt="" width="280" height="264">
+						<picture>
+							<source srcset="./img/about/img-3.avif" type="image/avif">
+							<source srcset="./img/about/img-3.webp" type="image/webp">
+							<img src="./img/about/img-3.jpg" alt="Панорама сверху на лес Индонезии" width="380" height="700">
+						</picture>
+
+						<picture>
+							<source srcset="./img/about/img-4.avif" type="image/avif">
+							<source srcset="./img/about/img-4.webp" type="image/webp">
+							<img src="./img/about/img-4.jpg" alt="Берег Индонезии с маленькими беседками" width="380" height="507">
+						</picture>
+
+						<picture>
+							<source srcset="./img/about/img-5.avif" type="image/avif">
+							<source srcset="./img/about/img-5.webp" type="image/webp">
+							<img src="./img/about/img-5.jpg" alt="Индонезийский холм" width="280" height="264">
+						</picture>
 					</div>
 				</div>
 			</div>
@@ -210,7 +253,7 @@
 			</div>
 		</section>
 		<!-- !CALCULATOR -->
-		<section class="calculator" id="calculator">
+		<section class="section calculator" id="calculator">
 			<div class="container container--calculator">
 				<div class="calculator__wrapper">
 					<div class="calculator__text">
@@ -293,7 +336,7 @@
 			</div>
 		</section>
 		<!-- !WHY -->
-		<section class="why" id="why">
+		<section class="section why" id="why">
 			<div class="container">
 				<h2 class="section__title section__title--why">Почему мы?</h2>
 				<p class="section__intro section__intro--why">Мы&nbsp;знаем, как сделать ваше путешествие незабываемым.</p>
@@ -339,30 +382,54 @@
 			</div>
 		</section>
 		<!-- !ALBUM -->
-		<section class="album" id="album">
+		<section class="section album" id="album">
 			<div class="container">
 				<h2 class="section__title section__title--album">Фотоальбом</h2>
 				<p class="section__intro section__intro--album">За&nbsp;годы поездок у&nbsp;нас накопилось много фотографий из&nbsp;Индонезии. Представляем их&nbsp;вам.</p>
 			</div>
-			<div class="slider__wrapper">
+			<div class="slider-wrapper">
 				<div class="album__slider">
 					<div class="album__item">
-						<img src="./img/album/img-6.jpg" alt="">
+						<picture>
+							<source srcset="./img/album/img-6.avif" type="image/avif">
+							<source srcset="./img/album/img-6.webp" type="image/webp">
+							<img src="./img/album/img-6.jpg" alt="Скалистый остров с замком">
+						</picture>
 					</div>
 					<div class="album__item">
-						<img src="./img/album/img-1.jpeg" alt="">
+						<picture>
+							<source srcset="./img/album/img-1.avif 1x" type="image/avif">
+							<source srcset="./img/album/img-1.webp 1x" type="image/webp">
+							<img src="./img/album/img-1.jpg" alt="Индонезийские горы">
+						</picture>	
 					</div>
 					<div class="album__item">
-						<img src="./img/album/img-2.jpeg" alt="">
+						<picture>
+							<source srcset="./img/album/img-2.avif" type="image/avif">
+							<source srcset="./img/album/img-2.webp" type="image/webp">
+							<img src="./img/album/img-2.jpg" alt="Лодка посреди озера">
+						</picture>
 					</div>
 					<div class="album__item">
-						<img src="./img/album/img-3.jpeg" alt="">
+						<picture>
+							<source srcset="./img/album/img-3.avif" type="image/avif">
+							<source srcset="./img/album/img-3.webp" type="image/webp">
+							<img src="./img/album/img-3.jpg" alt="красивый закат на пляже с птицами, летящими над водой">
+						</picture>
 					</div>
 					<div class="album__item">
-						<img src="./img/album/img-4.jpeg" alt="">
+						<picture>
+							<source srcset="./img/album/img-4.avif" type="image/avif">
+							<source srcset="./img/album/img-4.webp" type="image/webp">
+							<img src="./img/album/img-4.jpg" alt="пляж с волнами, разбивающимися о скалы">
+						</picture>
 					</div>
 					<div class="album__item">
-						<img src="./img/album/img-5.jpeg" alt="">
+						<picture>
+							<source srcset="./img/album/img-5.avif" type="image/avif">
+							<source srcset="./img/album/img-5.webp" type="image/webp">
+							<img src="./img/album/img-5.jpg" alt="Тропический остров с пальмами и хижиной посреди океана">
+						</picture>
 					</div>
 				</div>
 
@@ -382,11 +449,11 @@
 			</div>
 		</section>
 		<!-- !RESERVE -->
-		<section class="reserve" id="reserve">
+		<section class="section reserve" id="reserve">
 			<div class="container container--reserve">
 				<div class="reserve__wrapper">
 					<h2 class="reserve__title">Бронирование тура</h2>
-					<form class="form" action="">
+					<form class="form" method="post" action="https://jsonplaceholder.typicode.com/posts">
 						<div class="form__choice">
 							<div class="select-wrapper">
 								<div class="select select--date" id="form-select-date" tabindex="0">
@@ -463,7 +530,7 @@
 						</div>
 						<div class="contacts-row">
 							<div class="form__input-wrapper form__input-wrapper--mail">
-								<label for="email">Email</label>
+								<label for="mail">Email</label>
 								<input class="form__mail-input" type="email" name="mail" id="mail" placeholder="Введите адрес электронной почты">
 							</div>
 							<div class="form__input-wrapper form__input-wrapper--tel">
@@ -520,7 +587,7 @@
 				</div>
 				<div class="footer__contacts">
 					<div class="footer__title">Контакты</div>
-					<p>Тел.: <a href="tel:+7 937 839 23-61">+7 937 839 23-61</a></p>
+					<p>Тел.: <a href="tel:+79378392361">+7 937 839 23-61</a></p>
 					<p>Email: <a href="mailto:IndoTravel@gmail.com">IndoTravel@gmail.com</a></p>
 					<ul class="footer__social-list">
 						<li class="footer__social-item">
@@ -564,7 +631,7 @@
 				<div class="footer__callback">
 					<div class="footer__title">Есть вопросы по туру?</div>
 					<div class="footer__desc">Введите свой Email и мы свяжемся с вами в течении 3 рабочих дней</div>
-					<form class="footer__form">
+					<form class="footer__form" method="post" action="https://jsonplaceholder.typicode.com/posts">
 						<input id="footer-email" type="text" placeholder="Введите адрес электронной почты">
 						<button class="btn">
 							<svg width="19" height="17" viewBox="0 0 19 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
