--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-4.avif">
 	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-5.avif">
 
-	<!-- <link rel="preload" fetchpriority="high" as="image" href="./img/holder.webp" type="image/webp"> -->
+	<link rel="preload" fetchpriority="high" as="image" href="./img/holder.webp" type="image/webp">
 
 </head>
 
