--- a/src/index.html
+++ b/src/index.html
@@ -386,7 +386,8 @@
 						<h3 class="why__title">Помощь с&nbsp;детьми.</h3>
 						<p class="why__text">Мы&nbsp;предоставим вам профессиональную няню, которая присмотрит за&nbsp;вашим чадом в&nbsp;часы&nbsp;вашего отсутствия.</p>
 					</li>
-					<li class="why__card"> <svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<li class="why__card"> 
+						<svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
 						<h3 class="why__title">Национальная кухня.</h3>
