--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 		})
 	</script>
 	<!-- <link href="css/index.min.css" rel="stylesheet"> -->
+
+	<script defer src="./js/critjs.js"></script>
 	<script defer src="./js/index.min.js"></script>
 	<link rel="preload" href="./img/about/img-1.avif" as="image" type="image/avif">
 	<link rel="preload" href="./img/about/img-1.webp" as="image" type="image/webp">
@@ -137,7 +139,7 @@
 						</div>
 						<div class="about__bot">
 							<div class="about__left-col">
-								<picture >
+								<picture>
 									<source srcset="./img/about/img-1.avif" type="image/avif">
 									<source srcset="./img/about/img-1.webp" type="image/webp">
 									<img src="./img/about/img-1.jpg" alt="Лес Индонезии с пальмами на переднем плане" width="480" height="312" loading="eager" fetchpriority="high" decoding="async" style="content-visibility: auto; background-color: aquamarine; ">
@@ -386,7 +388,7 @@
 						<h3 class="why__title">Помощь с&nbsp;детьми.</h3>
 						<p class="why__text">Мы&nbsp;предоставим вам профессиональную няню, которая присмотрит за&nbsp;вашим чадом в&nbsp;часы&nbsp;вашего отсутствия.</p>
 					</li>
-					<li class="why__card"> 
+					<li class="why__card">
 						<svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
