--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>IndoTravel - путешествие по Индонезии</title>
+	<link href="css/index.min.css" rel="stylesheet">
 
-	<script>
+	<!-- <script>
 		document.addEventListener('DOMContentLoaded', () => {
 			const createLink = url => {
 				const link = document.createElement('link')
@@ -16,23 +17,20 @@
 			};
 			createLink('css/index.min.css');
 		})
-	</script>
-	<!-- <link href="css/index.min.css" rel="stylesheet"> -->
+	</script> -->
+	<link rel="preload" href="fonts/Nunito-200.woff2" crossorigin="anonymous" as="font" type="font/woff2">
+	<link rel="preload" fetchpriority="high" as="image" href="./img/header/header-banner.avif">
+	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-1.avif">
 
-	<script defer src="./js/critjs.js"></script>
-	<script defer src="./js/index.min.js"></script>
 	<link rel="preload" href="./img/about/img-1.avif" as="image" type="image/avif">
 	<link rel="preload" href="./img/about/img-1.webp" as="image" type="image/webp">
 	<link rel="preload" href="./img/about/img-1.jpg" as="image" type="image/jpeg">
 
-	<link rel="preload" fetchpriority="high" as="image" href="./img/header/header-banner.avif">
-	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-1.avif">
-	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-2.avif">
-	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-3.avif">
-	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-4.avif">
-	<link rel="preload" fetchpriority="high" as="image" href="./img/about/slider/slide-5.avif">
 
-	<link rel="preload" fetchpriority="high" as="image" href="./img/holder.webp" type="image/webp">
+	<link rel="preload" fetchpriority="high" as="image" href="./img/holder.webp" type="im	age/webp">
+
+	<script defer src="./js/critjs.min.js"></script>
+	<script defer src="./js/index.min.js"></script>
 
 </head>
 
